--- a/index.html
+++ b/index.html
@@ -792,8 +792,8 @@ people. Спасибо, Стас! Thanks also to Lexa Samons for his hard work i
 translating the original <a href="https://web.archive.org/web/20090311041814/http://ithkuil-
 russian.narod.ru/">Ithkuil site into
 Russian</a>.</p>
-<pre><code>                                                                           — _John Quijada_  
-                                                                         June, 2007
+<b style="text-align: right;">— John Quijada</b>  
+<b style="text-align: right;">June, 2007</b>
 </code></pre>
 
 
