--- a/10/index.html
+++ b/10/index.html
@@ -956,7 +956,7 @@ deer, goat,</em> or <em>lion</em>.</p>
   or consent with which they stopped. The following example sentence further illustrates 
 the complex detail which these suffixes make possible:</span></p>
 <blockquote>
-  <p><span class="style9"><img src="/images/10-1-2a.jpg" width="300" height="42" /><br />
+  <p><span class="style9"><img src="images/10-1-2a.jpg" width="300" height="42" /><br />
     &Ocirc;q&ouml;l&ouml;&#328;tausp&ucirc;ls &nbsp;&ecirc;&#316;nel&ocirc;zra &nbsp;ia&ccedil;taxhtiams&iacute;&#355;.</span><br />
     <span class="style14">STA</span><span class="style12">-&lsquo;</span>man<span class="style12">&rsquo;-</span><span class="style13"><span class="style12">EFF-NRM/DEL/M/CSL/UNI-<span class="style14"><span class="style8"><strong>XPT<span class="style32">1</span>/2-</strong></span></span><span class="style8"><strong>DLB<span class="style32">2</span>/2</strong></span>-<span class="style8"><strong>ENB<span class="style32">1</span>/6</strong></span><span class="style14">-IFL</span>&nbsp;&nbsp; STA</span></span><span class="style12">-&lsquo;</span>bird<span class="style12">&rsquo;-</span><span class="style13"><span class="style12">ABS-NRM/DEL/M/CSL/UNI-<span class="style8"><strong>IMP<span class="style32">2</span>/7</strong></span>-IFL  &nbsp;&nbsp;<br />
     DYN</span></span><span class="style12">-&lsquo;</span>room<span class="style12">&rsquo;-</span><span class="style13"><span class="style12">NRM/DEL/U/COA/CST-<span class="style8"><strong>AGN<span class="style32">2</span>/9-DEV<span class="style32">1</span>/1</strong></span></span></span>-<span class="style13"><span class="style12">FML</span></span><br />
@@ -1565,15 +1565,15 @@ in other languages, thus helping to reduce the size of the Ithkuil lexicon.</p>
   B, C and D present varying positional frames of reference).</span><br />
   <br />
   </p>
-<p align="center"><img src="/images/10-4-3-1a.gif" width="593" height="354" /> </p>
+<p align="center"><img src="images/10-4-3-1a.gif" width="593" height="354" /> </p>
 <blockquote>
-  <p align="center"> <img src="/images/10-4-3-1b.gif" width="361" height="402" /></p>
+  <p align="center"> <img src="images/10-4-3-1b.gif" width="361" height="402" /></p>
   <p>&nbsp;</p>
-  <p align="center"><img src="/images/10-4-3-1c.gif" width="354" height="394" /></p>
+  <p align="center"><img src="images/10-4-3-1c.gif" width="354" height="394" /></p>
 </blockquote>
 <p>&nbsp;</p>
 <blockquote>
-  <p align="center"><img src="/images/10-4-3-1d.gif" width="352" height="369" /></p>
+  <p align="center"><img src="images/10-4-3-1d.gif" width="352" height="369" /></p>
 </blockquote>
 <p align="justify"><br />
   <span class="style10">It is the ability to &#8220;slide&#8221; the axes of this three-dimensional 
@@ -1616,7 +1616,7 @@ in other languages, thus helping to reduce the size of the Ithkuil lexicon.</p>
 <blockquote>
   <p align="left"><span class="style10"><strong><br />
   </strong></span></p>
-  <p><span class="style9"><img src="/images/10-4-3-1.jpg" width="359" height="45" /><br />
+  <p><span class="style9"><img src="images/10-4-3-1.jpg" width="359" height="45" /><br />
     Qi&rsquo;&ecirc;lafs&nbsp; &acirc;mmul&nbsp; &acirc;hiogwokstat&uuml;kai  &nbsp;&iacute;xi&rsquo;asa&nbsp;  a&ccedil;t<sup>h</sup>u&nbsp; p&scaron;t&acirc;&rsquo;at.<span class="style10"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></span><span class="style9"><br />
     </span><span class="style34">STA-&lsquo;woman&rsquo;-CNR-NRM/DEL/M/CSL/UNI-MVT<span class="style32">1</span>/5-IFL &nbsp;&nbsp; STA-&lsquo;child&rsquo;-ABS-NRM/DEL/M/CSL/UNI-IFL &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <br />
     NNR-CNF-DYN- [incorp. stem: &lsquo;run&rsquo;]-<span class="style8"><strong>&lsquo;Octant-1&rsquo;</strong></span>-NRM/DEL/U/CSL/UNI-<span class="style40">SSD<span class="style32">1</span>/8</span>-IFL-EXS/ISR &nbsp;&nbsp;&nbsp;&nbsp;FRAMED-DYN-&lsquo;see&rsquo;-CNR-NRM/PRX/M/CSL/UNI-FML&nbsp;&nbsp; <br />
