--- a/8/index.html
+++ b/8/index.html
@@ -2027,27 +2027,27 @@ the VOCATIVE case is shown out of order in Position No. 48 in this table.)</p>
 <p align="justify" class="style14"><strong>8.1.2.5 Examples of Single-Referent Personal Reference 
 Adjuncts in Use</strong></p>
 <blockquote class="style14">
-  <p align="left"><strong><img src="/images/8-1-2-5a.jpg" width="122" height="36" /><br />
+  <p align="left"><strong><img src="images/8-1-2-5a.jpg" width="122" height="36" /><br />
     Azbal</strong><strong>&nbsp;</strong> <strong><strong>&scaron;</strong>oi&nbsp; </strong><strong>ek&scaron;&iacute;l</strong>.<br />
     <span class="style35">STA-&lsquo;anger&rsquo;-NRM/DEL/M/CSL/UNI-IFL</span> <span class="style35">&nbsp;&nbsp;<span class="style8"><strong>1+2u-SIT</strong></span></span>  <span class="style35">&nbsp;&nbsp;STA-&lsquo;clown&rsquo;-AFF-NRM/DEL/M/CSL/UNI-FML</span><br />
   <em>Our being here angers the clown.</em></p>
   <p align="left">&nbsp;</p>
-  <p align="left"><strong><img src="/images/8-1-2-5b.jpg" width="226" height="43" /><br />
+  <p align="left"><strong><img src="images/8-1-2-5b.jpg" width="226" height="43" /><br />
     I&#269;atosk&nbsp;</strong> <strong>&ecirc;ti&nbsp;</strong> <strong>pr&acirc;&rsquo;ol</strong><strong>&nbsp;</strong> <strong>akt&aacute;il</strong>.<br />
   <span class="style35">DYN-'physical.contact'-NRM/DEL/U/CSL/UNI-FRC<sub>1</sub>/7  &nbsp;&nbsp;<span class="style8"><strong>GEN-1m-AFF</strong></span><strong>&nbsp;&nbsp;</strong> </span><span class="style35">STA-&lsquo;leg&rsquo;-LOC-NRM/DEL/M/CSL/UNI-IFL &nbsp;&nbsp; </span> <span class="style35">    STA-&lsquo;rock&rsquo;-INS-NRM/DEL/M/CSL/UNI-FML<br />
   </span><em>I got hit on the leg with a rock.</em></p>
   <p align="left">&nbsp;</p>
-  <p align="left"><strong><img src="/images/8-1-2-5c.jpg" width="89" height="41" /><br />
+  <p align="left"><strong><img src="images/8-1-2-5c.jpg" width="89" height="41" /><br />
     ult&aacute;n&#316;&nbsp; k&euml;i </strong><br />
     <span class="style35">STA-&lsquo;page.of.writing&rsquo;-OBL-NRM/DEL/M/SEG/COA-FML&nbsp;&nbsp;&nbsp; <span class="style8"><strong>2m-</strong></span><span class="style8"><strong>PDC</strong></span></span><br />
     <em>&lsquo;your book&rsquo;</em> [i.e., the one you authored] </p>
   <p align="left">&nbsp;</p>
-  <p align="left"><img src="/images/4-6-16e.jpg" width="78" height="36" /><br />
+  <p align="left"><img src="images/4-6-16e.jpg" width="78" height="36" /><br />
     <strong>&#382;&ocirc;&nbsp;  c<sup>h</sup>ei&rsquo;as</strong><br />
     <span class="style35"><span class="style8"><strong>1m+2u+ua-ATT</strong></span> &nbsp;&nbsp;&nbsp;&nbsp;STA-&lsquo;grief&rsquo;-PCR-NRM/PRX/M/CSL/UNI-IFL</span><br />
     <em>&#8216;after our period of grief&#8217;</em></p>
   <p align="left">&nbsp;</p>
-  <p align="left"><strong><span class="style52"><img src="/images/8-1-2-5d.jpg" alt="" width="44" height="33" /><br />
+  <p align="left"><strong><span class="style52"><img src="images/8-1-2-5d.jpg" alt="" width="44" height="33" /><br />
     &#711;</span>xhoehwe</strong><br />
     <span class="style50">ua-REF-COA-CST</span><br />
   <em>&#8216;according to those variously interdependent but differing networks of people&#8217;</em></p>
@@ -2720,12 +2720,12 @@ to give a rising-toned adjunct.</p>
 <p align="justify">&nbsp; </p>
 <p align="justify" class="style14"><strong>8.1.3.2 Examples of Dual-Referent Adjuncts</strong></p>
 <blockquote>
-  <p><strong><span class="style9"><img src="/images/8-1-3-2a.jpg" width="160" height="44" /><br />
+  <p><strong><span class="style9"><img src="images/8-1-3-2a.jpg" width="160" height="44" /><br />
     Eusp&aacute;t &nbsp;_uda&nbsp; sm&acirc;&#8217;ol.</span><br />
     </strong><span class="style35">DYN-&lsquo;buy&rsquo;-NRM/DEL/U/CSL/UNI-FML&nbsp;&nbsp;&nbsp;<span class="style8"><strong>Ref2:IND-Ref1:mi/Ref2:<strong>1m</strong>-Ref1:OBL</strong></span>&nbsp;&nbsp; &nbsp;STA-&lsquo;valley&rsquo;-LOC-NRM/DEL/M/CSL/UNI</span>-<span class="style35">IFL</span><br />
     <span class="style14"><em>I bought it in the valley.</em></span> </p>
   <p>&nbsp;</p>
-  <p><span class="style9"><img src="/images/8-1-3-2b.jpg" width="112" height="39" /><br />
+  <p><span class="style9"><img src="images/8-1-3-2b.jpg" width="112" height="39" /><br />
     Awu&ccedil;k<sup>h</sup>oewi&nbsp; andaw&uacute;t<strong>&#316;</strong>?</span><span class="style14"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><br />
     <span class="style27"><span class="style28"><span class="style12">Ref2:AGG</span></span>-Ref2:<span class="style28"><span class="style12">ASO-Ref2:IND-Ref1:2m/Ref2:ua-Ref1:</span></span>REF</span><span class="style29">-</span><span class="style28"><span class="style12">Ref1:CSL-Ref1:DPX</span></span>&nbsp;&nbsp;&nbsp;&nbsp;<span class="style15">DYN</span>-&lsquo;<span class="style15">inquiry</span>&rsquo;-<span class="style15">IRG</span>-<span class="style15">NRM/DEL/M/CSL/DCT</span><span class="style10">-<span class="style12">FML</span></span><br />
     <span class="style14"><em>Are those formally recognized groups of people    making inquiries about the pair of you?</em></span></p>
@@ -2794,8 +2794,8 @@ to give a rising-toned adjunct.</p>
 </table>
 <p class="style14">This suffix rarely appears in fifth-degree, as use of the OBVIATIVE by itself defaults to the first referent mentioned. The following example illustrates the use of the switch reference suffix:</p>
 <p><span class="style14"><strong><br />
-  <img src="/images/8-1-4a.jpg" width="400" height="44" /><br />
-  L&eacute;i&#8217;aita&nbsp; eq</strong><strong>&#355;u</strong><strong>l&nbsp; t&ecirc;&nbsp;<strong>&nbsp;</strong>ek&scaron;&uuml;l&eacute;<strong>&#328;</strong><strong>&#355;</strong>&nbsp;<strong>&nbsp;</strong>aigwamt &nbsp;<sup>&#8211;</sup>ru&nbsp; by&ucirc;&#8217;&acirc;l &nbsp;mrer&icirc;wa<strong></strong>.</strong></span><span class="style14"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="style12"><a href="/sound_files/8-1-4.mp3" target="_blank">LISTEN</a></span>&nbsp;<a href="/sound_files/8-1-4.mp3" target="_blank"><img src="/images/Audio_icon.gif" width="19" height="16" border="0" align="absmiddle" /></a></span><br />
+  <img src="images/8-1-4a.jpg" width="400" height="44" /><br />
+  L&eacute;i&#8217;aita&nbsp; eq</strong><strong>&#355;u</strong><strong>l&nbsp; t&ecirc;&nbsp;<strong>&nbsp;</strong>ek&scaron;&uuml;l&eacute;<strong>&#328;</strong><strong>&#355;</strong>&nbsp;<strong>&nbsp;</strong>aigwamt &nbsp;<sup>&#8211;</sup>ru&nbsp; by&ucirc;&#8217;&acirc;l &nbsp;mrer&icirc;wa<strong></strong>.</strong></span><span class="style14"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="style12"><a href="/sound_files/8-1-4.mp3" target="_blank">LISTEN</a></span>&nbsp;<a href="/sound_files/8-1-4.mp3" target="_blank"><img src="images/Audio_icon.gif" width="19" height="16" border="0" align="absmiddle" /></a></span><br />
   <span class="style10"><span class="style12">FRAMED/IFL-DYN</span>-&lsquo;speak&rsquo;-<span class="style12">PCR</span>-<span class="style12">NRM/DEL/U/CSL/UNI</span>&nbsp;&nbsp;&nbsp;&nbsp; <span class="style12">STA</span>-&lsquo;brother&rsquo;-<span class="style12">IND</span>-<span class="style12">NRM/DEL/M/CSL/UNI-</span><span class="style12">IFL</span>&nbsp;&nbsp;&nbsp;&nbsp;   <span class="style12">1m</span>-<span class="style12">GEN&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="style12">STA</span>-&lsquo;clown&rsquo;-<span class="style12">DAT</span>-<span class="style12">NRM/DEL/M/CSL/UNI</span>-<span class="style12">FML</span>-<span class="style12">TPF<span class="style17">1</span>/3 </span><span class="style12"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;DYN</span>-&lsquo;run&rsquo;-<span class="style12">NRM/ICP/M/CSL/UNI-IFL </span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span class="style12">OBV/IND</span>-<span class="style32">[SWR/5]</span>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span class="style12">STA</span>-&lsquo;pet.dog&rsquo;-<span class="style12">ALL</span>-<span class="style12">NRM/DEL/M/CSL/UNI</span>-<span class="style12">IFL</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span class="style12">OBV/PRP</span>-<span class="style32">SWR/3</span></span><br />
   <span class="style14"><em>After my brother spoke to the clown, he </em>[my brother]<em> began  running toward his </em>[a third party&rsquo;s]<em> pet dog.</em></span></p>
 <p>&nbsp;</p>
@@ -2853,12 +2853,12 @@ to give a rising-toned adjunct.</p>
 <p align="justify" class="style14"> As we saw in <a href="06_verbs_2.html#Sec6o3o1">Section 6.3.1 </a>and<a href="05_verbs_1.html#Sec5o10"> Section 5.10</a>, Aspect can be shown as the <strong>Vs</strong> suffix to a verbal adjunct, in addition to the its more usual position as a consonantal affix <strong>Cs</strong> to a formative or verbal adjunct. However, in the absence of any verbal adjunct, and as another alternative to infixing <strong>Cs</strong> within a formative, Aspect can also be conveyed by simply using the <strong>Vs</strong> affix as its own autonomous adjunct.</p>
 <p align="justify" class="style14">Examples (compare these to the examples in <a href="05_verbs_1.html#Sec5o10o33">Sec. 5.10.33</a>):</p>
 <blockquote>
-  <p class="style14"><strong><img src="/images/5-10-33a.jpg" width="154" height="46" /><br />
+  <p class="style14"><strong><img src="images/5-10-33a.jpg" width="154" height="46" /><br />
 Ou&nbsp;<strong> </strong> <strong> </strong> inyat&nbsp; eq&#355;ulisqa&nbsp;  t&ecirc;.</strong><br />
 <span class="style35"><span class="style8"><strong>CLM</strong></span>&nbsp;&nbsp;&nbsp; DYN-&lsquo;choose&rsquo;-NRM/DEL/U/CSL/UNI-IFL&nbsp;&nbsp;&nbsp;&nbsp;STA-&lsquo;brother&rsquo;-IND-NRM/DEL/M/CSL/UNI-DCS1/1-IFL&nbsp;&nbsp;&nbsp; 1M-GEN</span><br />
-<em>My indecisive brother made a choice once and for all.</em> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="style12"><a href="/sound_files/8-2a.mp3" target="_blank">LISTEN</a></span>&nbsp;<a href="/sound_files/8-2a.mp3" target="_blank"><img src="/images/Audio_icon.gif" width="19" height="16" border="0" align="absmiddle" /></a></p>
+<em>My indecisive brother made a choice once and for all.</em> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="style12"><a href="/sound_files/8-2a.mp3" target="_blank">LISTEN</a></span>&nbsp;<a href="/sound_files/8-2a.mp3" target="_blank"><img src="images/Audio_icon.gif" width="19" height="16" border="0" align="absmiddle" /></a></p>
   <p class="style14"><strong>&nbsp;</strong></p>
-  <p class="style14"><strong><img src="/images/5-10-33b.jpg" width="112" height="43" /><br />
+  <p class="style14"><strong><img src="images/5-10-33b.jpg" width="112" height="43" /><br />
     Ui<strong>&nbsp;</strong> uolm&aacute;t&nbsp; &ecirc;qul.</strong><br />
   <span class="style35"><span class="style8"><strong>RGR&nbsp; </strong></span> &nbsp;&nbsp;DYN-&lsquo;sing.a.song&rsquo;-NRM/DEL/U/CSL/UNI-FML&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;STA-&lsquo;woman&rsquo;-IND-NRM/DEL/M/CSL/UNI-IFL</span><br />
   <em>The woman returned to singing.</em> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
@@ -2882,7 +2882,7 @@ Ou&nbsp;<strong> </strong> <strong> </strong> inyat&nbsp; eq&#355;ulisqa&nbsp;  
   phrase <em>How typical!</em></p>
 <h3 align="justify">Example:</h3>
 <blockquote>
-  <p align="justify" class="style14"><strong><img src="/images/5-10-33c.jpg" width="133" height="46" /><br />
+  <p align="justify" class="style14"><strong><img src="images/5-10-33c.jpg" width="133" height="46" /><br />
 &Ccedil;tar-ryo&nbsp; igralei&#355;rar&nbsp;  eglul&ocirc;n. </strong><span class="style25">&rarr; </span><strong><strong>Ar</strong><strong>&nbsp;</strong> &ccedil;tar-ryo&nbsp; <strong>ei<strong><strong>r</strong></strong>&#355;</strong> <strong>&nbsp;</strong>igral&nbsp;  eglul&ocirc;n.</strong><br />
 <span class="style20"><span class="style12">HOR/CTX/PPS-PCL-HAB</span> <span class="style12">&nbsp;&nbsp;  &nbsp;DYN-&lsquo;eat.food&rsquo;-NRM/DEL/M/CSL/UNI<strong>-</strong><span class="style45">EXT<span class="style17">2</span>/6-NA1<span class="style17">1</span>/5</span>-IFL&nbsp;&nbsp;  &nbsp;&nbsp;STA-&lsquo;illness&rsquo;-IND-NRM/DEL/M/CSL/UNI-AGC<span class="style17">2</span>/7-IFL</span><span class="style25"> &rarr; </span><br />
 <span class="style12"><span class="style45">NA1<span class="style17">1</span>/5</span> &nbsp; HOR/CTX/PPS-PCL-HAB</span> <span class="style12">&nbsp;&nbsp; <span class="style45">EXT<span class="style17">2</span>/6</span>&nbsp;&nbsp;   &nbsp;DYN-&lsquo;eat food&rsquo;-NRM/DEL/M/CSL/UNI-IFL&nbsp;&nbsp;  &nbsp;&nbsp;STA-&lsquo;illness&rsquo;-IND-NRM/DEL/M/CSL/UNI-AGC<span class="style17">2</span>/7-IFL</span></span><em><br />
